Intermittent browser/components/uitour/test/browser_UITour2.js | Menu should be visible after showMenu() -
Categories
(Firefox :: Tours, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox76 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: rmaries [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=302006658&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Gj9Usg0wRkutQPIZRLjiqQ/runs/0/artifacts/public/logs/live_backing.log
[task 2020-05-12T23:27:33.988Z] 23:27:33 INFO - TEST-START | browser/components/uitour/test/browser_UITour2.js
[task 2020-05-12T23:27:39.754Z] 23:27:39 INFO - TEST-PASS | browser/components/uitour/test/browser_UITour2.js | The panel shouldn't have @panelopen -
[task 2020-05-12T23:27:39.754Z] 23:27:39 INFO - TEST-PASS | browser/components/uitour/test/browser_UITour2.js | The panel shouldn't be open -
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - TEST-PASS | browser/components/uitour/test/browser_UITour2.js | Menu button should know that the menu is closed -
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - Done shared checks
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - Starting
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - test_bookmarks_menu
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - TEST-PASS | browser/components/uitour/test/browser_UITour2.js | Menu should initially be closed -
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - Buffered messages finished
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - TEST-UNEXPECTED-FAIL | browser/components/uitour/test/browser_UITour2.js | Menu should be visible after showMenu() -
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - Stack trace:
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - chrome://mochikit/content/browser-test.js:test_ok:1299
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - chrome://mochitests/content/browser/browser/components/uitour/test/head.js:taskify/</<:61
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - promise callbackchrome://mochitests/content/browser/browser/components/uitour/test/head.js:taskify/<:60
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - chrome://mochitests/content/browser/browser/components/uitour/test/head.js:nextTest/</<:546
[task 2020-05-12T23:27:39.755Z] 23:27:39 INFO - setTimeout handlerchrome://mochikit/content/tests/SimpleTest/SimpleTest.js:SimpleTest_setTimeoutShim:788
[task 2020-05-12T23:27:39.756Z] 23:27:39 INFO - chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:waitTest:1045
[task 2020-05-12T23:27:39.756Z] 23:27:39 INFO - MessageListener.receiveMessagechrome://mochikit/content/tests/SimpleTest/SimpleTest.js:SimpleTest.waitForFocus:1037
[task 2020-05-12T23:27:39.756Z] 23:27:39 INFO - chrome://mochikit/content/browser-test.js:test_waitForFocus:1393
[task 2020-05-12T23:27:39.756Z] 23:27:39 INFO - chrome://mochitests/content/browser/browser/components/uitour/test/head.js:loadUITourTestPage/<:441
[task 2020-05-12T23:27:39.756Z] 23:27:39 INFO - JSActor queryresource://testing-common/BrowserTestUtilsChild.jsm:handleEvent:265
[task 2020-05-12T23:27:39.756Z] 23:27:39 INFO - == Done test, doing shared checks before teardown ==
![]() |
||
Comment 1•5 years ago
|
||
Has stopped after bug 1584935 got backed out.
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Ack, will try to make sure this is fixed before relanding that. Closing for now. Please ni? if it shows up again due to my change :)
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 4•5 years ago
|
||
Let's reopen to land the fix.
Assignee | ||
Comment 5•5 years ago
|
||
The UITour code assumes that it will return the up-to-date value, which
doesn't happen with lazy frame construction.
This is used sparingly in the front end code, so it doesn't quite
warrant more optimization.
Comment hidden (Intermittent Failures Robot) |
Comment 8•5 years ago
|
||
bugherder |
Comment 9•5 years ago
|
||
Set release status flags based on info from the regressing bug 1584935
Description
•