Bug 1637459 - Make nsXULElement::HasMenu flush frames. r=tnikkel

The UITour code assumes that it will return the up-to-date value, which
doesn't happen with lazy frame construction.

This is used sparingly in the front end code, so it doesn't quite
warrant more optimization.

Differential Revision: https://phabricator.services.mozilla.com/D75710